k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emali-app-service
spec:
  selector:
    app: emali-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
