k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emali-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - api.calindari.com
      secretName: emali-app-tls
  rules:
    - host: api.calindari.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emali-app-service
                port:
                  number: 80
